--- a/pom.xml
+++ b/pom.xml
@@ -1,25 +1,47 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.cloud</groupId>
-  <artifactId>SpringCloud</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>org.cloud</groupId>
+    <artifactId>SpringCloud</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-  <name>SpringCloud</name>
-  <url>http://maven.apache.org</url>
+    <name>SpringCloud</name>
+    <url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+   <!-- <dependencyManagement>
+        <dependencies>
+
+&lt;!&ndash;            <dependency>&ndash;&gt;
+&lt;!&ndash;                <groupId>junit</groupId>&ndash;&gt;
+&lt;!&ndash;                <artifactId>junit</artifactId>&ndash;&gt;
+&lt;!&ndash;                <version>4.13.2</version>&ndash;&gt;
+&lt;!&ndash;                <scope>test</scope>&ndash;&gt;
+&lt;!&ndash;            </dependency>&ndash;&gt;
+&lt;!&ndash;            <dependency>&ndash;&gt;
+&lt;!&ndash;                <groupId>org.springframework.boot</groupId>&ndash;&gt;
+&lt;!&ndash;                <artifactId>spring-boot-starter</artifactId>&ndash;&gt;
+&lt;!&ndash;            </dependency>&ndash;&gt;
+
+&lt;!&ndash;            <dependency>&ndash;&gt;
+&lt;!&ndash;                <groupId>org.springframework.boot</groupId>&ndash;&gt;
+&lt;!&ndash;                <artifactId>spring-boot-starter-test</artifactId>&ndash;&gt;
+&lt;!&ndash;                <scope>test</scope>&ndash;&gt;
+&lt;!&ndash;            </dependency>&ndash;&gt;
+&lt;!&ndash;            <dependency>&ndash;&gt;
+&lt;!&ndash;                <groupId>org.springframework.cloud</groupId>&ndash;&gt;
+&lt;!&ndash;                <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>&ndash;&gt;
+&lt;!&ndash;               <version>0.9.0.RELEASE</version>&ndash;&gt;
+&lt;!&ndash;            </dependency>&ndash;&gt;
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>-->
 </project>
